--- a/config/database.yml
+++ b/config/database.yml
@@ -19,7 +19,10 @@ test:
   timeout: 5000
 
 production:
-  adapter: sqlite3
-  database: db/production.sqlite3
-  pool: 5
-  timeout: 5000
+  adapter: mysql2
+  encoding: utf8
+  host: localhost
+  port: 3306
+  database: homeflar_web
+  username: homeflar_web
+  password: "ii9K+yQ_ni5h"
